--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "jest": "^29.7.0",
+    "typescript": "^5.7.2",
+    "@types/bun": "latest"
   }
 }
